--- a/naver/naver.css
+++ b/naver/naver.css
@@ -206,5 +206,5 @@ nav li:nth-child(6) span:first-child {
   font-size: 14px;
 }
 main {
-  background-color: #f2f4f7;
+  background-color: #f2f4f7d7;
 }
