--- a/naver/naver.css
+++ b/naver/naver.css
@@ -237,6 +237,10 @@ nav li:nth-child(14) span:first-child {
   width: 32px;
   background-position: -277px -1px;
 }
+nav li.more:first-child span:first-child {
+  width: 55px;
+  background-position: 0 -104px;
+}
 
 .nav-divider {
   display: inline-block;
