--- a/naver/naver.css
+++ b/naver/naver.css
@@ -269,4 +269,35 @@ main {
   display: inline-block;
   width: 100%;
 }
+#main-ad {
+  display: inline-block;
+  width: 740px;
+  height: 120px;
+}
+#main-login {
+  display: inline-block;
+  width: 332px;
+  height: 120px;
+}
+#main-ytn {
+  display: inline-block;
+  width: 740px;
+  height: 46px;
+}
+#main-newsstand {
+  display: inline-block;
+  width: 740px;
+  height: 246px;
+}
+#main-weather {
+  display: inline-block;
+  width: 332px;
+  height: 142px;
+}
+#main-second-ad {
+  display: inline-block;
+  width: 332px;
+  height: 150px;
+  background: #555;
+}
 /*main의 속성중 displat: inline-block을 주므로 마진상쇄를 없앴다.*/
