--- a/naver/naver.css
+++ b/naver/naver.css
@@ -95,7 +95,8 @@ div#header-center h1 {
 } */
 
 div#header-search h2 {
-  /*display: none은 스크린 리더도 못읽는다. 따라서 다음시간에 다른 방법을 쓸것이다.*/
+  /*display: none은 스크린 리더도 못읽는다. 
+  .따라서 다음시간에 다른 방법을 쓸것이다.*/
   display: none;
 }
 div#header-search fieldset {
