--- a/naver/naver.css
+++ b/naver/naver.css
@@ -23,6 +23,9 @@ h6 {
 .inline-block {
   display: inline-block;
 }
+.float-left {
+  float: left;
+}
 .blind {
   position: absolute;
   overflow: hidden;
@@ -328,7 +331,6 @@ main {
   width: 740px;
   height: 46px;
   background-color: white;
-  margin-right: 8px;
   margin-bottom: 8px;
 }
 #main-ytn h3,
@@ -341,7 +343,6 @@ main {
   height: 246px;
   background-color: white;
   margin-right: 8px;
-  margin-bottom: 8px;
   vertical-align: top;
 }
 #main-newsstand h3 {
@@ -353,7 +354,6 @@ main {
   padding: 0;
   list-style: none;
   display: inline-block;
-  vertical-align: top;
 }
 #main-newsstand li {
   width: calc(100% / 6);
@@ -374,19 +374,20 @@ main {
   height: 142px;
   background-color: white;
   margin-bottom: 8px;
+  vertical-align: top;
 }
 #main-second-ad {
   display: inline-block;
   width: 332px;
   height: 150px;
   background: #555;
-  margin-bottom: 8px;
+  vertical-align: top;
 }
 #main-category {
   /* display: inline-block; */
   float: left;
   width: 740px;
-  height: 837px;
+  height: 882px;
   background-color: white;
   margin-right: 8px;
   margin-bottom: 8px;
@@ -394,15 +395,16 @@ main {
 #main-shpping {
   /* display: inline-block; */
   float: left;
-  width: 332px;
-  height: 837px;
+  width: 330px;
+  height: 882px;
   background-color: white;
   margin-bottom: 8px;
 }
-#main-third-ad,
+#main-third-block,
 #main-fourth-block {
   display: inline-block;
   width: 100%;
+  vertical-align: top;
 }
 #main-event {
   /* display: inline-block; */
@@ -414,7 +416,7 @@ main {
   margin-right: 8px;
 }
 #main-third-ad {
-  display: inline-block;
+  float: left;
   width: 332px;
   height: 130px;
   background-color: #555;
