--- a/naver/naver.css
+++ b/naver/naver.css
@@ -318,11 +318,11 @@ main {
   vertical-align: top;
   margin-bottom: 8px;
 }
-#main-second-block .inline-block:first-child {
+#main-second-block .float-left:first-child {
   width: 740px;
   margin-right: 8px;
 }
-#main-second-block .inline-block:last-child {
+#main-second-block .float-left:last-child {
   width: 332px;
   vertical-align: top;
 }
@@ -399,6 +399,10 @@ main {
   height: 882px;
   background-color: white;
   margin-bottom: 8px;
+}
+#main-shpping iframe {
+  width: 100%;
+  height: 100%;
 }
 #main-third-block,
 #main-fourth-block {
